# telegram-signals-parisng

./: .env.example  .gitignore  DevTS_Telegram_Bot.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  TESTING_REPORT.md  TEST_RESULTS.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
.serena/: project.yml
.serena/memories/: image_editing_architecture_analysis.md
config/: callers.yaml
data/: production_export.json
docs/: AUTHENTICATION.md  AUTHENTICATION_FIX.md  INTEGRATION_TESTING.md  api.md  architecture.md  testing.md
docs/architecture/: adr-0001-multi-provider-vision.md
docs/research/: README.md  implementation-ref.md  (+2 more)
migrations/: 001_init_schema.sql  002_add_forward_columns.sql
scripts/: auth_local.py  check_group_messages.py  check_users.py  compare_images.py  extract_production_data.py  generate_mock_images.py  generate_russian_test_image.py  get_group_id.py  get_user_id.py  research_signals.py  run_integration_tests.py  test_caller_extraction.py  test_edit_and_post.py  test_image_edit.py  test_last_signals.py  test_new_group.py  test_openai_edit.py  test_paddleocr.py  test_pipeline.py  test_real_post.py  verify_target_group.py
src/: __init__.py  callers_config.py  config.py  main.py  telethon_setup.py
tests/: __init__.py  test_callers_config.py  test_flow_tracker.py  test_formatters.py  test_forward_helper.py  test_logger.py  test_openai_integration.py  test_parser.py  test_seamless_replacer.py  test_signals_dataset.py  test_text_cleaner.py  test_update_handler.py
(+86 files in other folders)
